added test, example

--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "perlin-simplex",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "description": "Simplex Perlin noise",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/index.js",
+    "example": "node example/index.js"
   },
   "repository": {
     "type": "git",
